tests/miniJava/neg/000030_mutation.MiniJava
class java else public static void Main ( String [ ] java ) { { } } }
